--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ body{
     display: grid;
 }
 .men1 div img{
-    margin: 6.85px 13.725px;
+    margin: auto;
     border-radius: 10px;
     height: 131px;
     width: 132px;
