--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ body{
     /* text-align: center; */
     /* vertical-align:center; */
     padding-top: 90px;
+    font-size: 23px;
 }
 .men{
     background-color: turquoise;
