--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,8 @@ body{
     width: 132px;
 }
 .men1 div p{
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Satisfy', cursive;
+
     text-align: center;
     vertical-align: center;
     margin: auto;
